adding some features

--- a/Bank-Failure.html
+++ b/Bank-Failure.html
@@ -192,22 +192,19 @@ Joshua O.S. Hunt
 </div>
 <div id="predicting-bank-failure" class="slide section level2">
 <h1>Predicting Bank Failure</h1>
-<details>
-<summary>
-Meyer and Pifer (1970)
-</summary>
-<p>
+<details><summary>Meyer and Pifer (1970)</summary><p>
+
 <ul>
 <li>Small sample: Training 30 and Testing 9</li>
 <li>Matched Sample</li>
 <li>1948 - 1965</li>
 <li>Ordinary Least Squares: LPM</li>
 </ul>
-</p>
-</details>
+</p></details>
+
 <details>
 <summary>
-Thomson (1991)
+<p>Thomson (1991)</p>
 </summary>
 <p>
 <ul>
@@ -219,7 +216,7 @@ Thomson (1991)
 </details>
 <details>
 <summary>
-Wheelock and Wilson (2005)
+<p>Wheelock and Wilson (2005)</p>
 </summary>
 <p>
 <ul>
@@ -231,7 +228,7 @@ Wheelock and Wilson (2005)
 </details>
 <details>
 <summary>
-Estrella, Park, and Perstiani (2000)
+<p>Estrella, Park, and Perstiani (2000)</p>
 </summary>
 <p>
 <ul>
@@ -243,7 +240,7 @@ Estrella, Park, and Perstiani (2000)
 </details>
 <details>
 <summary>
-Cole and White (2012)
+<p>Cole and White (2012)</p>
 </summary>
 <p>
 <ul>
@@ -255,7 +252,7 @@ Cole and White (2012)
 </details>
 <details>
 <summary>
-Ng and Roychowdhury (2014)
+<p>Ng and Roychowdhury (2014)</p>
 </summary>
 <p>
 <ul>
@@ -267,7 +264,7 @@ Ng and Roychowdhury (2014)
 </details>
 <details>
 <summary>
-Kosimidou and Zopounidis (2008)
+<p>Kosimidou and Zopounidis (2008)</p>
 </summary>
 <p>
 <ul>
@@ -2845,6 +2842,28 @@ december
 <h1>Paper</h1>
 <object data="DHHR Draft 20211019.pdf" type="application/pdf" width="100%" height="70%">
 </object>
+</div>
+<div id="test" class="slide section level2">
+<h1>Test</h1>
+<p>This is an example of toggle buttons</p>
+<script type="text/javascript">
+   function toggle_visibility(id) {
+       var e = document.getElementById(id);
+       if(e.style.display == 'block')
+          e.style.display = 'none';
+       else
+          e.style.display = 'block';
+   }
+</script>
+<button onclick="toggle_visibility(&#39;myDiv1&#39;);">I am 1</button>
+
+<div id="myDiv1">
+<p>Goes with 1</p>
+</div>
+<button onclick="toggle_visibility(&#39;myDiv2&#39;);">I am 2</button>
+<div id="myDiv2">
+<p>Goes with 2</p>
+</div>
 </div>
 
   <!-- dynamically load mathjax for compatibility with self-contained -->
